Feature/fcs 29/submit fcs application (#84)
- Added new functionality to handle requests for applications submission and to check if the application is valid for submission